--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "stylelint:fix": "npx stylelint 'src/**/*.css' --fix"
   },
   "dependencies": {
+    "graphql-hooks": "^6.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
