--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "stylelint:fix": "npx stylelint 'src/**/*.css' --fix"
   },
   "dependencies": {
+    "@svgr/rollup": "^8.0.1",
+    "classnames": "^2.3.2",
     "graphql-hooks": "^6.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0"
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.13.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
@@ -40,6 +44,7 @@
     "prettier": "^2.8.8",
     "stylelint": "^15.8.0",
     "stylelint-config-css-modules": "^4.2.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^33.0.0",
     "typescript": "^5.0.2",
