--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@svgr/rollup": "^8.0.1",
+    "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
     "graphql-hooks": "^6.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.13.0",
     "react-use": "^17.4.0"
